# Ainia-Prototype

./: .env.example  .gitignore  Ainia_Adventure_Stories_Demo.ipynb  README.md  demo_adaptive_features.py  demo_personas.py  final_optimizer.py  main.py  pyproject.toml  stress_test.py  test_multimodal.py
.ipynb_checkpoints/: Ainia_Adventure_Stories_Demo-checkpoint.ipynb
docs/: Executive_Summary.md  PLAN.md  TASKS.md  TECHNICAL_DOCS.md
scripts/: README.md
scripts/tools/: content_validator.py
src/: __init__.py  app.py  emotion_branching.py  enhanced_app.py  learning_integrator.py  multimodal_app.py  multimodal_system.py  progress_reporter.py  prompt_builder.py  safety_validator.py  story_generator.py
src/ainia/: __init__.py
src/ainia/apps/: __init__.py  app.py
src/ainia/core/: __init__.py  adaptive_system.py  multi_question_system.py  prompt_builder.py  story_generator.py
tests/: __init__.py  performance_test.py
tests/integration/: test_comprehensive.py
