[project]
name = "ainia-adventure"
version = "0.1.0"
description = "AI-powered educational storytelling for children aged 5-9"
authors = [
    {name = "Ainia Team"}
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "gtts>=2.3.0",
    "streamlit-drawable-canvas>=0.9.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[project.scripts]
ainia-adventure = "ainia.apps.app:main"
